# cc_auto_switch

./: .gitignore  .npmignore  .pre-commit-config.yaml  .rustfmt.toml  CLAUDE.md  Cargo.toml  HOMEBREW.md  LICENSE  LICENSE_zh  Makefile  NPM_INSTALLATION.md  README.md  README_EN.md  TEST_COVERAGE_SUMMARY.md  build.rs  clippy.toml  develop-readme.md  index.js  install.js  mise.toml  package.json  publish.sh  test_completion.fish
.cargo/: config.toml
.claude/: settings.local.json
.claude/epics/max-thinking-tokens-support/: 13-analysis.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/max-thinking-tokens-support/updates/13/: stream-A.md
.claude/epics/quick-switch-with-number/: 10-analysis.md  10.md  11-analysis.md  11.md  3-analysis.md  3.md  4-analysis.md  4.md  5-analysis.md  5.md  6.md  7.md  8.md  epic.md  github-mapping.md
.claude/epics/quick-switch-with-number/updates/10/: stream-A.md
.claude/epics/quick-switch-with-number/updates/11/: stream-A.md  stream-B.md  stream-C.md
.claude/epics/quick-switch-with-number/updates/3/: stream-A.md
.claude/epics/quick-switch-with-number/updates/4/: stream-A.md
.claude/epics/quick-switch-with-number/updates/5/: stream-A.md
.claude/epics/support-vim-bindkey-in-edit-config/: 21-analysis.md  21.md  22-analysis.md  22.md  23-analysis.md  23.md  24-analysis.md  24.md  25-analysis.md  25.md  epic.md  execution-status.md  final-summary.md  github-mapping.md  test-report.md
.claude/epics/support-vim-bindkey-in-edit-config/updates/23/: stream-A.md
.claude/prds/: max-thinking-tokens-support.md  quick-switch-with-number.md  support-vim-bindkey-in-edit-config.md
.github/workflows/: ci.yml  formula-template.rb  publish.yml  release.yml  scoop-manifest-template.json  update-brew-formula.yml  update-scoop-manifest.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  npm_support_implementation.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
ccs-proxy/: .gitignore  Cargo.toml  README.md  build.rs
ccs-proxy/benches/: streaming.rs
ccs-proxy/src/: config.rs  error.rs  handle.rs  lib.rs  session.rs  state.rs
ccs-proxy/src/api/: mod.rs  routes.rs  stream.rs  ui.rs
ccs-proxy/src/capture/: extract.rs  mod.rs  redact.rs
ccs-proxy/src/provider/: claude.rs  codex.rs  mod.rs
ccs-proxy/src/proxy/: forward.rs  mod.rs  sse_tap.rs
ccs-proxy/src/store/: fs.rs  mod.rs
ccs-proxy/tests/: api_health.rs  api_server_disabled.rs  api_sessions.rs  api_stream.rs  api_types.rs  capture_types.rs  e2e_serve.rs  error_upstream_unreachable.rs  proxy_roundtrip.rs  reassembler_claude.rs  reassembler_codex.rs  redact_body_in_capture.rs  session.rs  store_degraded.rs  store_fs.rs
ccs-proxy/tests/fixtures/: claude_stream.sse  claude_tool_use_stream.sse  codex_stream.sse
ccs-proxy/web/: app.js  index.html  style.css
docs/: codex.md  codex_EN.md
docs/superpowers/plans/: 2026-05-16-codex-config-switching.md  2026-05-17-cross-platform-support.md  2026-05-23-from-file-default-import.md  2026-05-28-cc-switch-daemon.md  2026-05-28-ccs-proxy.md  2026-05-28-daemon-aggregate.md  2026-05-28-daemon-tracing.md  2026-05-29-aggregate-filters.md  2026-05-29-cc-use-official-intercept.md  2026-05-29-detail-structured-view.md  2026-05-29-frontend-rebuild.md
docs/superpowers/specs/: 2026-05-16-codex-config-switching-design.md  2026-05-17-cross-platform-support-design.md  2026-05-23-from-file-default-import-design.md  2026-05-28-cc-switch-daemon-design.md  2026-05-28-ccs-proxy-design.md  2026-05-28-daemon-aggregate-design.md  2026-05-28-daemon-tracing-design.md  2026-05-29-aggregate-filters-design.md  2026-05-29-cc-use-official-intercept-design.md  2026-05-29-detail-structured-view-design.md  2026-05-29-frontend-rebuild-design.md
scripts/: increment-version.sh  publish.sh  release.sh  setup-pre-commit.sh
src/: claude_settings.rs  cmd.rs  lib.rs  main.rs  platform.rs  statusline.rs  utils.rs
src/cli/: cli.rs  completion.rs  display_utils.rs  main.rs  mod.rs
src/cmd/: claude_settings.rs  cli.rs  completion.rs  completion_tests.rs  config.rs  config_storage.rs  display_utils.rs  error_handling_tests.rs  integration_tests.rs  interactive.rs  interactive_tests.rs  main.rs  main_tests.rs  mod.rs  shell_completion.rs  tests.rs  types.rs  utils.rs
src/codex/: auth_writer.rs  commands.rs  mod.rs  storage.rs  types.rs
src/config/: config.rs  config_storage.rs  mod.rs  types.rs
src/daemon/: commands.rs  fork.rs  lifecycle.rs  logging.rs  mod.rs  pidfile.rs  state.rs  status.rs
src/daemon/aggregate/: mod.rs  routes.rs  state.rs  stream.rs
src/interactive/: codex_interactive.rs  interactive.rs  mod.rs
tests/: aggregate_ui_serving.rs  codex_tests.rs  completion_tests.rs  daemon_aggregate.rs  daemon_integration.rs  daemon_liveness.rs  daemon_logging.rs  daemon_supervisor.rs  error_handling_tests.rs  integration_tests.rs  interactive_tests.rs  main_tests.rs  platform_tests.rs  tests.rs
web/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
web-aggregate/: app.js  index.html  style.css
web/apps/aggregate/: index.html  package.json  vite.config.ts
web/apps/aggregate/src/: App.svelte  main.ts  store.svelte.ts
web/apps/aggregate/src/components/: Header.svelte  Sidebar.svelte
web/apps/aggregate/src/views/: RequestDetail.svelte  RequestDrawer.svelte  RequestsView.svelte  SessionsView.svelte
web/apps/aggregate/src/views/detail/: ContentBlock.svelte  JsonBlock.svelte  Markdown.svelte  MessageThread.svelte  OverviewTab.svelte  RequestTab.svelte  ResponseTab.svelte  SystemSection.svelte  ToolsSection.svelte
web/apps/proxy/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/apps/proxy/src/: App.svelte  main.ts
