[package]
name = "cc-switch"
version = "0.1.35"
edition = "2024"
description = "Manage multiple Claude / Codex configurations with an optional Rust daemon that transparently proxies traffic to a built-in aggregate dashboard (request inspection, structured conversation view, token stats — a Rust rewrite of ccglass). Zero background processes when the daemon is off. Cross-platform: Linux / macOS / Windows (x86_64 + ARM64)."
license = "MIT"
repository = "https://github.com/Linuxdazhao/cc_auto_switch"
homepage = "https://github.com/Linuxdazhao/cc_auto_switch"
documentation = "https://github.com/Linuxdazhao/cc_auto_switch"
keywords = ["claude", "codex", "api", "configuration", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "cc-switch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.6", features = ["derive", "cargo"] }
clap_complete = "4.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
tempfile = "3.20.0"
colored = "3.0"
crossterm = "0.29.0"
which = "7"
base64 = "0.22.1"
ccs-proxy = { path = "ccs-proxy", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
rust-embed = "8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true

[profile.dev]
incremental = false
debug = 0

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
